WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
298076
Fix internal visionOS build
https://bugs.webkit.org/show_bug.cgi?id=298076
Summary
Fix internal visionOS build
Alex Christensen
Reported
2025-08-28 17:37:00 PDT
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-08-28 17:37:13 PDT
<
rdar://problem/159404488
>
Alex Christensen
Comment 2
2025-08-28 17:38:25 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/50042
EWS
Comment 3
2025-08-28 17:40:44 PDT
Committed
299292@main
(d6c5049c3e00): <
https://commits.webkit.org/299292@main
> Reviewed commits have been landed. Closing PR #50042 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug