Fix internal visionOS build https://bugs.webkit.org/show_bug.cgi?id=298076 rdar://159404488

Unreviewed.

* Source/WebCore/Modules/model-element/ModelPlayer.cpp:

Canonical link: https://commits.webkit.org/299292@main